--- a/BNMPCITC(Club Class Tutorial Website)/index.html
+++ b/BNMPCITC(Club Class Tutorial Website)/index.html
@@ -10,6 +10,7 @@
     </header>
 
     <p> Web Development <br> <sub> & </sub> <br> <span> Designing </span> <br> <strong> An Introduction </strong> </p>
+    <p> Bullshit volunteers  </p>
 </body>
 </html>
 
